update bookmark api by language
