# internal/api/handler.go
@@ -569,6 +569,12 @@ func (h *Handler) AddOrUpdateUserBookmark(ctx *gin.Context) {
 
 func (h *Handler) GetUserBookmarks(ctx *gin.Context) {
 	userId, _ := ctx.Get("user_id")
+	languageCode := ctx.Query("language_code")
+	if len(languageCode) == 0 {
+		ctx.JSON(http.StatusBadRequest,
+			getResponse(false, nil, "Query language code is missing", "Query language code is missing"))
+		return
+	}
 	result := []struct {
 		Slide_Id     uint   `json:"slide_id"`
 		BookmarkId   uint   `json:"bookmark_id"`
@@ -581,7 +587,7 @@ func (h *Handler) GetUserBookmarks(ctx *gin.Context) {
 		Table(DBTableBookmarks).
 		Joins("INNER JOIN slides ON bookmarks.slide_id = slides.id").
 		Joins("INNER JOIN files ON slides.file_uid = files.file_uid").
-		Joins("INNER JOIN source_paths ON files.source_uid = source_paths.source_uid AND source_paths.languages = files.languages").
+		Joins("INNER JOIN source_paths ON files.source_uid = source_paths.source_uid AND source_paths.languages = files.languages AND ? = ANY(files.languages)", languageCode).
 		Where("bookmarks.user_id = ?", userId).
 		Order("bookmarks.order_number").
 		Find(&result)
